--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -122,17 +122,17 @@
 
   @include breakpoint($large) {
     display: block;
-    width: auto;
-    height: auto;
+    width: 200px;
+    height: 200px;
   }
 
   img {
     max-width: 200px;
-    //border-radius: 50%;
+    border-radius: 50%;
 
     @include breakpoint($large) {
       padding: 5px;
-     //border: 1px solid $border-color;
+     border: 1px solid $border-color;
     }
   }
 }
