--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -122,12 +122,12 @@
 
   @include breakpoint($large) {
     display: block;
-    width: 200px;
-    height: 200px;
+    width: auto;
+    height: auto;
   }
 
   img {
-    max-width: 200px;
+    max-width: 500px;
     border-radius: 50%;
 
     @include breakpoint($large) {
