--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -127,8 +127,8 @@
   }
 
   img {
-    max-width: 500px;
-    
+    max-width: 250px;
+    border-radius: 50%;
 
     @include breakpoint($large) {
       padding: 5px;
