--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -128,7 +128,7 @@
 
   img {
     max-width: 250px;
-    border-radius: 50%;
+    border-radius: 1px;
 
     @include breakpoint($large) {
       padding: 5px;
